# rust-wiki

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  Procfile  README.adoc  docker-compose.yml  log4rs.yml
src/: db.rs  log_config.rs  main.rs  tests.rs  view.rs
templates/: base.html.tera  edit.html.tera  not_found.html.tera  search.html.tera  view.html.tera
