[package]
name = "rust-wiki"
version = "0.1.0"
authors = ["Marcelo Adamatti <adamatti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.7"
log4rs = "0.8.3"
rocket = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]


